2014-06-11  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strcmp.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/strcmp.c: New file:
	multiarch strcmp for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strcmp-ppc64.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strcmp-power7.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strcmp
	multiarch optimizations.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.

2014-06-06  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strncat.S [STRLEN]: Define it as
	strlen for non SHARED builds.

	* sysdeps/powerpc/powerpc32/power6x/fpu/Implies: New file.
	* sysdeps/powerpc/powerpc64/power6x/fpu/Implies: new file.
	* sysdeps/powerpc/powerpc64/power6x/multiarch/Implies: New file.
	* sysdeps/powerpc/powerpc64/power5+/fpu/Implies: Remove multiarch
	imply folder.
	* sysdeps/powerpc/powerpc64/power5/fpu/Implies: Likewise.
	* sysdeps/powerpc/powerpc64/power7/fpu/Implies: Likewise.
	* sysdeps/powerpc/powerpc64/power8/fpu/Implies: Likewise.
	* sysdeps/powerpc/powerpc64/power6x/fpu/multiarch/Implies: Adjust
	correct imply path.
	* sysdeps/powerpc/powerpc64/power7/strncat.S (STRLEN): Define correct
	strlen symbol for non multi-arch builds.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_isnan.S (__isnan): Add
	missing hidden_def and weak_alias.

2014-05-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power4/memset.S (memset): Replace insrdi
	by insrwi.
	* sysdeps/powerpc/powerpc32/power6/memset.S (memset): Likewise.
	* sysdeps/powerpc/powerpc32/power7/memset.S (memset): Likewise.
	* sysdeps/powerpc/powerpc32/power7/memchr.S (memchr): Likewise.
	* sysdeps/powerpc/powerpc32/power7/memrchr.S (memrchr): Likewise.
	* sysdeps/powerpc/powerpc32/power7/rawmemchr.S (rawmemchr): Likewise.
	* sysdeps/powerpc/powerpc32/power7/strchr.S (strchr): Likewise.