@@ -9,7 +9,8 @@ Version 2.19.1
 
 * The following bugs are resolved with this release:
 
-  16545, 16683, 16689, 16701, 16706, 16707, 16739, 16815, 16619, 16740.
+  16545, 16683, 16689, 16701, 16706, 16707, 16739, 16815, 16619, 16740,
+  17031.
 
 Version 2.19
 
